otherpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: other
spec:
  containers:
    - image: jonathan34c.azurecr.io/apiserver:tool
      name: other
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
