pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apiserver-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apiserver
  template:
    metadata:
      labels:
        app: apiserver
    spec:
      containers:
        - name: apiserver-container
          image: jonathan34c.azurecr.io/apiserver:tool
          ports:
            - containerPort: 8080
