testdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testdeploy
  labels:
    run: testdeploy
spec:
  selector:
    matchLabels:
      run: testdeploy
  replicas: 1
  template:
    metadata:
      labels:
        run: testdeploy
    spec:
      containers:
      - name: testdeploy
        image: jonathan34c.azurecr.io/apiserver:fix
