testpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fixpod
spec:
  containers:
    - image: jonathan34c.azurecr.io/apiserver:fix
      name: fixpod
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
