tool.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tool
  labels:
    run: tool
spec:
  selector:
    matchLabels:
      run: tool
  replicas: 1
  template:
    metadata:
      labels:
        run: tool
    spec:
      containers:
      - name: tool
        image: jonachang.azurecr.io/curlimage:one
