MISE.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mise-auth
  namespace: jonachang
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mise-auth
  template:
    metadata:
      labels:
        app: mise-auth
    spec:
      containers:
      - name: mise
        image: aropocsvc.azurecr.io/mise:dev
        ports:
        - containerPort: 5000
          name: http-auth
        volumeMounts:
        - name: config
          mountPath: /app/etc
          readOnly: true
      volumes:
        - name: config
          configMap:
            name: mise-appsettings
            items:
            - key: appsettings.json
              path: appsettings.json
---
apiVersion: v1
kind: Service
metadata:
  name: mise-auth
  namespace: jonachang  
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: http-auth
      name: http-auth
  selector:
    app: mise-auth
