RP.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rp
  namespace: jonachang  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rp
  template:
    metadata:
      labels:
        app: rp
    spec:
      # serviceAccountName: curl-meshtls-test
      containers:
      - name: rp
        image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        ports:
        - containerPort: 9080
---
apiVersion: v1
kind: Service
metadata:
  name: rp 
  labels:
    app: rp
    service: rp
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: rp
