podserver.yaml
apiVersion: v1
kind: Service
metadata:
  name: testservice
spec:
  selector:
    app: other
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
