testservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingressservice
  labels:
    app: fixpod
spec:
  type: ClusterIP
  selector:
    app: fixpod
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
