ingress-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: rp-gateway-external
spec:
  selector:
    istio: aks-istio-ingressgateway-external
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rp-vs-external
spec:
  hosts:
  - "*"
  gateways:
  - rp-gateway-external
  http:
  - match:
    - uri:
        exact: /rp
    route:
    - destination:
        host: rp
        port:
          number: 9080
