ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - arorp.westus3.cloudapp.azure.com
    secretName: ingress-cert
  rules:
  - http:
      paths:
      - path: /rp(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: rp
            port:
              number: 80
      - path: /ga(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: ga
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: rp
            port:
              number: 80
