testauth.yaml
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: test-auth-policy
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: nginx-server-test
  requiredAuthenticationRefs:
    - name: curl-meshtls-test
      kind: MeshTLSAuthentication
      group: policy.linkerd.io
